# RenderingSystemTest

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
extlibs/libs/Debug/: lua51.lib  luajit.lib
extlibs/libs/Debug/x64/: lua51.lib  luajit.lib
extlibs/libs/Release/: lua51.lib  luajit.lib
resources/shaders/: SSAO.fs  SSAO.vs  copy.fs  deferred.fs  deferred.vs  deferredlight.fs  deferredlight.vs  lights.inc  material.inc  ubo.inc  utils.inc
src/: Constants.h  FrustumCuller.cpp  FrustumCuller.h  LightManager.h  LoadUtils.cpp  LoadUtils.h  Material.cpp  Material.h  MeshUtils.cpp  MeshUtils.h  PostProcess.cpp  PostProcess.h  Renderable.h  SceneLoader.cpp  SceneLoader.h  TextureLoader.cpp  TextureLoader.h  UBOsAndMesh.h  main.cpp
src/graphics/: Buffer.cpp  Buffer.h  CommandBuffer.h  CommandDataStructs.h  Context.cpp  Context.h  DrawState.cpp  DrawState.h  EnumsFlags.h  ForwardDecl.h  Handles.h  RenderState.h  RenderingSystem.cpp  RenderingSystem.h  RenderingThread.cpp  RenderingThread.h  ShaderInfo.h  ShaderProgram.cpp  ShaderProgram.hpp
